# rust-learning

./: .gitignore  AUTHORS.rst  Cargo.toml  Dockerfile  README.rst
argonautica-test/: .gitignore  Cargo.toml
argonautica-test/src/: main.rs
async-test/: Cargo.toml
async-test/src/: main.rs
docs/: authors.rst  conf.py  contributing.rst  history.rst  readme.rst  usage.rst
mongodb-crud/: .env.dist  Cargo.toml
mongodb-crud/src/: main.rs  vars.rs
mongodb-crud/src/crud/: create.rs  delete.rs  read.rs  update.rs
src/: main.rs
