[package]
name = "lerning"
version = "0.1.0"
authors = ["chunlinwang <chunlinwang1983@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
dotenv = "0.15.0"
chrono = "0.4.19"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["async-std-runtime"]